Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -206,7 +206,6 @@ nav {
 .widget.extendednavigation ul {
   display: table;
   margin: 0 auto;
-  float: none;
   text-align: center;
   li.folder ul {
     text-align: left;
